@@ -1,32 +1,50 @@
-! Do not configure sys (TAP/TUN) or mesh (ethX, wlanX, ...) interfaces
-! in this file. Use /etc/default/des-olsr or dpkg-reconfigure des-olsr.
+! Do not configure sys (TAP/TUN) or mesh (ethX, wlanX, ...) interfaces in this file. Use /etc/default/des-olsr or dpkg-reconfigure des-olsr.
 ! Your changes to this file will be overwritten.
 
-set hello_size 200
-set hello_interval 2000
-set tc_size 999
-set tc_interval 5000
-no logging stderr
-logging ringbuffer 20
-loglevel info
-
 ! set in verbose mode
-! set verbose 1
+set verbose 0
 
-! Set validity time coefficient. HELLO and TC messages sent by this host will be
-! hold for time equals 'hellointerval * LINK_HOLD_TIME_KOEFF' and 'tcinterval * validitycoeff'
-! Validity coeff is set to 16 to be similar of the OGM validity time of B.A.T.M.A.N routing protocal
-! (for comparation purposes).
-set validitycoeff 20
+! set size of HELLO packet
+set hello_size 128
+
+! set interval between two HELLO packets
+set hello_interval 2000
+
+! set size of TC packet
+set tc_size 128
+
+! set interval between two TC packets
+set tc_interval 5000
+
+! set validity time coefficient. HELLO and TC messages sent by this host will be
+! hold for time equals 'hello_interval * LINK_HOLD_TIME_KOEFF' and 'tc_interval * validitycoeff'
+! Validity coeff is set to 16 to be similar of the OGM validity time of B.A.T.M.A.N routing protocal (for comparation purposes).
+set validity_coeff 20
 
 ! set willingness coefficient of this host to re-send broadcast messages.
-! WILL_ALLWAYS = 7 - re-send all of broadcast messages
-! WILL_NEVER = 0 - re-send no broadcast messages
-! set willingness 3
+! WILL_ALLWAYS 	= 7 - re-send all of broadcast messages
+! WILL_NEVER 	= 0 - re-send no broadcast messages
+set willingness 3
 
 ! set WINDOW_SIZE for calculation of link quality (PDR or ETX).
-! default: 50
-set windowsize 50
+set window_size 50
+
+! set metric to use on routing calculation
+! metric = [PLR, HC, ETX, ETX-ADD]
+!		PLR = packet loss ratio
+!		HC = hop count
+!		ETX = ETX (multiplicative path ETX) - default
+!		ETX-ADD = ETX (additive path ETX) - according to "Packet Sequence Number based ETX Metric for Mobile Ad Hoc Networks"-Internet Draft.
+set metric HC
+
+! disable stderr logging
+no logging stderr
+
+! set logging ringbuffer size
+logging ringbuffer 20
+
+! set loglevel [(d)ebug, (i)nfo, (n)otice, (w)arning, (e)rror, (c)ritical, e(m)ergency]
+loglevel info
 
 ! set path to routing-log file.
 ! FORMAT:
@@ -35,14 +53,5 @@ set windowsize 50
 ! and the sequence number of packet send by destination to source is max(packet_seq_num_dest, "packet_seq_num_src + 1",
 ! where packet_seq_num_src is last seq_number of packet sent by source to destination.
 ! ATTENTION: Upon activation slightly reduces daemon performance!
-! set routinglog /var/log/des-olsr-routing.log
-
-
-! set metric to use on routing calculation
-! metric = [PLR, HC, ETX]
-!		PLR = packet loss ratio
-!		HC = hop count
-!		ETX = ETX (multiplicative path ETX) - default
-!		ETX-ADD = ETX (additive path ETX) - according to "Packet Sequence Number based ETX Metric for Mobile Ad Hoc Networks"-Internet Draft.
-! set metric HC
+! set routing_log /var/log/des-olsr-routing.log
 
